--- a/index.html
+++ b/index.html
@@ -13,32 +13,37 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-  <header>
-    <div class="image">
-    </div>
-  </header>
-  
-  <main>
-    <div class="content">
-      <h1>Get insights that help your business grow.</h1>
-      <p>
-        Discover the benefits of data analytics and make better decisions regarding revenue, customer
-        experience, and overall efficiency.
-      </p>
-    </div>
+  <div class="card">
 
-    <div class="points">
-      <ul>
-        <li>10k+ companies</li>
-        <li>314 templates</li>
-        <li>12m+ queries</li>
-      </ul>
-    </div>
+    <header class="image">
+      <div class="layer">
+      </div>
+    </header>
+    
+    <main>
+      <div class="content">
+        <h1>Get <span>insights</span> that help your business grow.</h1>
+        <p>
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer
+          experience, and overall efficiency.
+        </p>
+      </div>
 
-  </main>
+      <div class="points">
+        <ul>
+          <li><span>10k+</span> companies</li>
+          <li><span>314</span> templates</li>
+          <li><span>12m+</span> queries</li>
+        </ul>
+      </div>  
+    </main>
+
+  </div>
 
 
   <footer>
@@ -47,5 +52,6 @@
       Coded by <a href="https://www.frontendmentor.io/profile/Ma1021">Maggie</a>.
     </div>
   </footer>
+
 </body>
 </html>
